# tts-chrome

./: .gitignore  README.md  pyproject.toml  test_stream_sd.py  websocket-server.py
tts-ext/: README.md  package-lock.json  package.json  postcss.config.mjs  wxt.config.ts
tts-ext/src/: index.css
tts-ext/src/components/ui/: Loader.tsx  Overlay.tsx  OverlayManager.tsx
tts-ext/src/entrypoints/: background.ts  content.ts  main.content.tsx
tts-ext/src/entrypoints/popup/: App.tsx  index.html  main.tsx
tts-ext/src/lib/: modelLoader.ts  ttsClient.ts  utils.ts  utilsText.ts
tts-ext/src/public/models/Kokoro-82M-v1.0-ONNX/onnx/: README.md
tts-ext/src/public/onnx/: README.md
tts_extension/: background-ws.js  content.js  manifest.json  popup.html
tts_extension/js/: main.js  tts.js  ui.js  utils.js
