[project]
name = "tts-chrome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "kokoro-onnx>=0.4.7",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "websockets>=15.0.1",
]
